:fire: :art: Cleanup and tracking
Deleted extra files and added face tracking so user can control the scene with their face.

--- a/public/assets/css/three-d.css
+++ b/public/assets/css/three-d.css
@@ -30,3 +30,13 @@ div.floating {
 	overflow : auto;
 	z-index: 100;
 }
+
+#video, #canvas {
+	bottom: 0;
+	position: absolute;
+	z-index: 100;
+}
+
+#viewport {
+	padding-top: 40px;
+}
